# minesweeper-project

./: CMakeLists.txt  README.md  difficultySettings.cpp  difficultySettings.h  main.cpp  minesweeper.cpp  minesweeper.h
build-Project-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  imgui.ini
build-Project-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Project-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/glfw/: cmake_install.cmake  cmake_uninstall.cmake
build-Project-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/glfw/examples/: boing.ilk  cmake_install.cmake  gears.ilk  heightmap.ilk  offscreen.ilk  particles.ilk  sharing.ilk  simple.ilk  splitview.ilk  wave.ilk
build-Project-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/glfw/src/: glfw3.lib  (+1 more)
build-Project-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/imgui/: cmake_install.cmake
build-glfw-3.3.8-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  qtcsettings.cmake
build-glfw-3.3.8-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-glfw-3.3.8-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/examples/: boing.ilk  cmake_install.cmake  gears.ilk  heightmap.ilk  offscreen.ilk  particles.ilk  sharing.ilk  simple.ilk  splitview.ilk  wave.ilk
build-glfw-3.3.8-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/src/: cmake_install.cmake  glfw3.lib  glfw3.pc
build-glfw-3.3.8-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/tests/: clipboard.ilk  cmake_install.cmake  cursor.ilk  empty.ilk  events.ilk  gamma.ilk  glfwinfo.ilk  icon.ilk  iconify.ilk  inputlag.ilk  joysticks.ilk  monitors.ilk  msaa.ilk  opacity.ilk  reopen.ilk  tearing.ilk  threads.ilk  timeout.ilk  title.ilk  triangle-vulkan.ilk  windows.ilk
build-imgui-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-imgui-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
imgui/: CMakeLists.txt
resources/: imgui_impl_glfw.cpp
(+458 files in other folders)
